completed the prendere_un_cane.html page

--- a/LAB_02_10_Migliorini/index.html
+++ b/LAB_02_10_Migliorini/index.html
@@ -12,8 +12,10 @@
                     <a href="index.html"><img src="img/home_icon.png" alt="Icon" width="50" height="50"></a>           
                     <span>AdoptMe</span>
                     <a href="motivi_per_prendere_un_cane.html"><button id="bottone_vantaggi">vantaggi</button></a>
+                    <a href="tabella_razze.html"><button id="bottone_razze">migliori razze</button></a>
                 </div>
             </h1>
+            
 
             <img id="cagnolino-1" src="img/cagnolino.jpg" alt="cagnolino1" width="500" height="500">
             <img id="cagnolino-2" src="img/cagnolino2.jpg" alt="cagnolino2" width="500" height="500">
