initialized tabella_razze.html and fixed href reference paragrafo-sicurezza

--- a/LAB_02_10_Migliorini/motivi_per_prendere_un_cane.html
+++ b/LAB_02_10_Migliorini/motivi_per_prendere_un_cane.html
@@ -71,7 +71,7 @@
                         </ol>
                     </div>
 
-                    <h3  id="paragrafo-solitudine" class="titolo-paragrafi">Ti fanno sentire al sicuro!</p>
+                    <h3  id="paragrafo-sicurezza" class="titolo-paragrafi">Ti fanno sentire al sicuro!</p>
              
                         <div id="spiegazione-paragrafo" class="border-box">
                             <h4 id="nome-paragrafo">Sicurezza</h4>
