--- a/LAB_02_10_Migliorini/tabella_razze.html
+++ b/LAB_02_10_Migliorini/tabella_razze.html
@@ -20,6 +20,12 @@
             <br>
             <p id="paragrafo-titolo" >Mille ragioni per dare una nuova casa ad un cagnolino</p>
 
+              <!-- Add the following code snippet to the body of the page: -->
+               
+
+
+
+
             <br>
             <br>
 
