Refactor CSS file names and update HTML files

--- a/LAB_02_10_Migliorini/motivations.html
+++ b/LAB_02_10_Migliorini/motivations.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>AdoptMe</title>
-        <link rel="stylesheet" href="css/motivi_per_prendere_un_cane.css">
+        <link rel="stylesheet" href="css/motivations.css">
     </head>
     
     <body>
