--- a/LAB_02_10_Migliorini/top_breeds.html
+++ b/LAB_02_10_Migliorini/top_breeds.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>AdoptMe</title>
-            <link rel="stylesheet" href="css/tabella_razze.css">
+            <link rel="stylesheet" href="css/top_breeds.css">
         </head>
         
         <body>
