Refactor HTML file to update button href references

--- a/LAB_02_10_Migliorini/index.html
+++ b/LAB_02_10_Migliorini/index.html
@@ -11,8 +11,8 @@
                 <div>
                     <a href="index.html"><img src="img/home_icon.png" alt="Icon" width="50" height="50"></a>           
                     <span>AdoptMe</span>
-                    <a href="motivi_per_prendere_un_cane.html"><button id="button-benefits">vantaggi</button></a>
-                    <a href="tabella_razze.html"><button id="button-breeds">migliori razze</button></a>
+                    <a href="motivations.html"><button id="button-benefits">vantaggi</button></a>
+                    <a href="top_breeds.html"><button id="button-breeds">migliori razze</button></a>
                 </div>
             </h1>
             
