fixed some code...

--- a/motivations.html
+++ b/motivations.html
@@ -26,13 +26,15 @@
             <li><a id="link-topic" href="#paragraph-security">Un cane ti aiuta a sentirti più sicuro</a></li>
         </ul>
 
-        <h3 id="paragraph-exercise" class="paragraph-title">Come un cane aiuta con il tuo fisico</h3>
-            
+        <h3 id="paragraph-exercise" class="paragraph-title">Ti aiuta a tenerti in forma!</h3>
+         
         <div id="paragraph-explanation" class="border-box">
-            <h4 id="paragraph-name">Compagnia e affetto ❤️</h4>
-            <p class="paragraph-content"> I cani offrono un amore e un'amicizia fedele e sincera</p>
-            <p class="paragraph-content">Un cane è sempre pronto a farti compagnia, riducendo la sensazione di solitudine.</p>
-            <p class="paragraph-content">La loro presenza può aiutare a ridurre lo stress e l'ansia, e a migliorare l'umore.</p>    
+            <h4 id="paragraph-name">Esercizio fisico</h4>
+            <ol class="paragraph-content">
+                <li>Avere un cane richiede passeggiate regolari, incoraggiandoti a uscire anche quando non ne hai voglia.</li>
+                <li>I cani amano giocare e ti inviteranno a farlo, spingendoti a muoverti di più</li>
+                <li>Con un cane, è più probabile che allunghi le tue passeggiate quotidiane, esplorando nuovi percorsi.</li>
+            </ol>
         </div>
 
         <h3 id="paragraph-friendship" class="paragraph-title">Vuoi conoscere nuove persone? Un cane ti aiuta!</h3>
